# k-backup

./: Cargo.toml  README.md  config.example.recipients.yml  config.example.yml
.github/: dependabot.yml
.github/workflows/: build-glibc.yml  bump.yml  cache-factory.yml  ci.yml  release.yml
docs/: design-event-notifications.md
src/: config.rs  cycle.rs  error.rs  lib.rs  main.rs  retention.rs  scheduler.rs
src/backup/: arcvec.rs  backup_config.rs  mod.rs  redacted.rs  retention.rs  tar.rs  validate.rs
src/backup/archive/: base64.rs  mod.rs  sqlite.rs  walkdir_globset.rs
src/backup/compress/: mod.rs  xz.rs
src/backup/encrypt/: age.rs  mod.rs
src/backup/file_ext/: mod.rs
src/backup/finish/: mod.rs
src/backup/notifications/: command.rs  event.rs  mod.rs  smtp.rs
src/backup/result_error/: error.rs  mod.rs  result.rs
src/notifications/: command.rs  event.rs  mod.rs  smtp.rs
src/pipeline/: collector.rs  compress.rs  encrypt.rs  entry.rs  entry_errors.rs  mod.rs  tar.rs
src/pipeline/sources/: base64.rs  glob.rs  mod.rs  sqlite.rs
tests/: binary_test.rs  integration_test.rs
tests/fixtures/: test_identity.txt  test_identity_1.txt  test_identity_2.txt  test_recipients.txt
