[package]
name = "k_backup"
version = "2.0.0"
edition = "2021"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
globset = { version = "0.4.18", features = ["serde1"] }
walkdir = "2.5.0"
tar = "0.4.44"
liblzma = { version = "0.4.5", features = ["parallel"] }
age = "0.11.1"
io-enum = "1.2.0"
derive_more = { version = "2.0.1", features = ["from", "display", "into"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
validator = { version = "0.20.0", features = ["derive"] }
zeroize = "1.8.2"
rusqlite = { version = "0.37.0", features = ["backup"] }
thiserror = "2.0.17"
tempfile = "3.23.0"
serde_with = { version = "3.16.0", features = ["base64"] }
serde_yml = "0.0.12"
serde_json = "1.0.145"
chrono = "0.4.42"
humantime-serde = "1.1.1"
itertools = "0.14.0"
rayon = "1.11.0"
indent = "0.1.1"
cron-parser = "0.11.0"
clap = { version = "4.5.16", features = ["derive"] }