[package]
name = "k_backup"
version = "2.0.0"
edition = "2021"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
globset = { version = "0.4.18", features = ["serde1"] }
walkdir = "2.5.0"
tar = "0.4.46"
liblzma = { version = "0.4.6", features = ["parallel"] }
age = "0.11.3"
io-enum = "1.2.1"
derive_more = { version = "2.1.1", features = ["from", "display", "into", "deref", "deref_mut"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
validator = { version = "0.20.0", features = ["derive"] }
zeroize = "1.8.2"
rusqlite = { version = "0.39.0", features = ["backup"] }
thiserror = "2.0.18"
tempfile = "3.27.0"
serde_with = { version = "3.20.0", features = ["base64", "alloc"] }
serde_yml = "0.0.12"
serde_json = "1.0.150"
chrono = "0.4.44"
humantime-serde = "1.1.1"
itertools = "0.14.0"
rayon = "1.12.0"
indent = "0.1.1"
cron-parser = "0.11.2"
clap = { version = "4.6.1", features = ["derive"] }
thiserror-ext = "0.3.0"
bon = "3.9.1"
getset = "0.1.6"
saturating_cast = "0.1.0"
sanitize-filename = "0.6.0"
dyn-iter = "1.0.1"
function_name = "0.3.0"
lettre = { version = "0.11.22", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "rustls-tls", "serde"] }
openssl-sys = { version = "0.9", optional = true }

[features]
vendored-openssl = ["dep:openssl-sys", "openssl-sys/vendored"]
bundled-sqlite = ["rusqlite/bundled"]
static-lzma = ["liblzma/static"]
fully-static = ["bundled-sqlite", "static-lzma"]

[dev-dependencies]
maik = "0.2.0"