[package]
name = "k_backup"
version = "3.0.2"
edition = "2021"

[dependencies]
# Encryption
age = { version = "0.11", features = ["ssh", "plugin", "cli-common"] }

# Compression
liblzma = { version = "0.4", features = ["parallel"] }

# Database
rusqlite = { version = "0.40", features = ["backup"] }

# Archive
tar = "0.4"

# Parallelism
rayon = "1.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde-saphyr = "0.0.27"
serde_json = "1.0"
base64 = "0.22"

# Email
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "pool", "smtp-transport", "rustls-tls"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Filesystem
tempfile = "3"
globset = { version = "0.4", features = ["serde1"] }
walkdir = "2.5"

# Time parsing
humantime-serde = "1.1"
cron-parser = "0.11"

# Error handling
thiserror = "2.0"

# Security
zeroize = "1.8"

# Process
wait-timeout = "0.2"

# Optional: for static builds
openssl-sys = { version = "0.9", optional = true }

[features]
vendored-openssl = ["dep:openssl-sys", "openssl-sys/vendored"]
bundled-sqlite = ["rusqlite/bundled"]
static-lzma = ["liblzma/static"]
fully-static = ["bundled-sqlite", "static-lzma"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
maik = "0.2"
